...
                    .frame(width:width, height: height/3)
                    .clipShape(Circle())
                    .shadow(color: .orange, radius: 1, x: 0, y: 0)
            }
            Group {
                
                Text("Sign in")
                    .font(.title)
                    .fontWeight(.semibold)
                    .accessibilityIdentifier("SignInTitle")
                
                CustomTextField(isSecure: false, hint: "Email", imageName: "envelope", text: $authenticationViewModel.textFieldEmail)
                    .frame(width: getMaxWidth())
                    .accessibilityIdentifier("SignInEmail")
                
                CustomTextField(isSecure:true, hint: "Password", imageName: "lock", text: $authenticationViewModel.textFieldPassword)
                    .frame(width: getMaxWidth())
                    .accessibilityIdentifier("SignInPassword")
                
                if let messageError = authenticationViewModel.messageError {
                    Text(messageError)
                        .font(.body)
                        .foregroundColor(.red)
                        .accessibilityIdentifier("MessageErrorSignIn")
                }
                
                Button("Forgot the password?") {
                    email = ""
                    showResetPasswordModal.toggle()
                }.foregroundColor(.blue)
...
                
                NavigationLink {
                    SignupView(authenticationViewModel: authenticationViewModel, firestoreViewModel: firestoreViewModel)
                } label: {
                    Text("Don't have an account? Sign up")
                        .foregroundColor(.blue)
                }.accessibilityIdentifier("navigationLinkSignUp")
            }
            
        }
        .padding(.top, isLandscape ? 20 : 0)
        .onAppear{
            authenticationViewModel.clearAccountParameter()
...
