...
                                .padding(4)
                                .background(Circle().foregroundColor(.red))
                                .offset(x: -20, y: -10)
                        }
                        
                    }
                }.accessibilityIdentifier("heartButton")
            }.padding(.horizontal,15)
            
            RoundedRectangle(cornerRadius: 10)
                .frame(height: 1)
                .foregroundColor(.white.opacity(0.5))
                .shadow(color:.black,radius: 5)
...
