...
                            }
                            
                            
                            NavigationLink {
                                ModifyProfileView(firestoreViewModel: firestoreViewModel, settingsViewModel: settingsViewModel)
                            } label: {
                                Label("Modify profile", systemImage: "person")
                            }
                            
                            NavigationLink {
                                ProvidersDetailView(authenticationViewModel: authenticationViewModel)
                            } label: {
                                Label("Providers", systemImage: "person.crop.circle.badge.plus")
                            }
                            
                            NavigationLink {
                                NotificationDetailView(settingsViewModel: settingsViewModel)
                            } label: {
                                Label("Notifications", systemImage: "bell")
                            }
                            
                        }
                        .listRowBackground(Color("oxfordBlue"))
                        .listRowSeparatorTint(.white.opacity(0.8))
                        .foregroundColor(.white.opacity(0.8))
                        
                        Button{
                            showAlert.toggle()
                        } label: {
                            Label("Delete Account", systemImage: "minus.circle")
                        }
                        .listRowBackground(Color("oxfordBlue"))
                        .listRowSeparatorTint(.white.opacity(0.8))
                        .foregroundColor(.red)
                        .alert(isPresented: $showAlert) {
                            Alert(
                                title: Text("Delete Account"),
                                message: Text("Deleting your account will delete all content and remove your information from the database."),
                                primaryButton: .default(
                                    Text("Cancel")
                                ),
                                secondaryButton: .destructive(
                                    Text("Continue"),
                                    action:
                                        {
                                            guard let uid = firestoreViewModel.firestoreUser?.id else {
...
                            )
                        }
                        Button {
                            authenticationViewModel.logout()
                            firestoreViewModel.firestoreUser = nil
                        } label: {
                            Label("Logout", systemImage: "pip.exit")
                                .foregroundColor(.blue)
                        }.listRowBackground(Color("oxfordBlue"))
                        
                    }
                    .frame(width: isLandscape ? width/1.5 : width/1.1, height: 370)
                    .listStyle(.insetGrouped)
                    .scrollContentBackground(.hidden)
                    .padding(.top,20)
                }
                
                
            }
            .accessibilityIdentifier("SettingsScrollView")
            .ignoresSafeArea()
            .background(RadialGradient(gradient: Gradient(colors: [Color("delftBlue"), Color("oxfordBlue")]), center: .center, startRadius: 5, endRadius: 500).opacity(1))
            
        }
        .onAppear(){
            isLandscape = orientationInfo.orientation == .landscape
...
