...
                } catch {
                    settingsViewModel.settingsNotifications = false
                }
            }
        }
        .frame(maxWidth: .infinity)
        .accessibilityIdentifier("NotificationVStack")
        .background(RadialGradient(gradient: Gradient(colors: [Color("delftBlue"), Color("oxfordBlue")]), center: .center, startRadius: 5, endRadius: 500))
        .onAppear(){
            isLandscape = orientationInfo.orientation == .landscape
            width = UIScreen.main.bounds.width
        }
        .onChange(of: orientationInfo.orientation) { orientation in
...
