...
            VStack(spacing: 0){
                Text("Points of Interests")
                    .font(.largeTitle)
                    .fontWeight(.bold)
                    .foregroundColor(.white)
                    .frame(maxWidth: .infinity, alignment: .leading)
                    .accessibilityIdentifier("HomeTitle")
                    .padding(15)
                
                RoundedRectangle(cornerRadius: 10)
                    .frame(height: 1)
                    .foregroundColor(.white.opacity(0.5))
                    .shadow(color:.black,radius: 5)
...
