...
            
            Text("Create New Account")
                .font(.title)
                .multilineTextAlignment(.center)
                .fontWeight(.semibold)
                .lineSpacing(10)
                .accessibilityIdentifier("SignUpTitle")
            
            Group{
                
                CustomTextField(isSecure: false, hint: "Username", imageName: "person", text: $authenticationViewModel.textFieldUsername)
                    .accessibilityIdentifier("SignUpUsername")
                
...
